@@ -3065,6 +3065,17 @@
       </component>
     </version>
   </module>
+  <module name="slab">
+    <version release="HEAD">
+      <component name="slab" dir="slab" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-main-menu.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="sodipodi">
     <version release="HEAD">
       <component name="sodipodi" dir="sodipodi" group="extras">
