@@ -1,3 +1,7 @@
+2006-09-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
+
+	* translation-status.xml: Added slab module.
+
 2006-09-07  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* translation-status.xml: Zenity and EOG have branched.
